--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@
 	border-radius: 10px;
 	margin:20px;
 	position:relative;
+	border: 1px solid transparent;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+#searchBar:focus{
+	outline:none;
+	box-shadow:0 10px 16px 0 #8470ff,0 6px 20px 0 #8470ff;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 #grid {
@@ -26,8 +34,10 @@
 	font-size: 24px;
 	color:#909090;
 	box-shadow:0 0px 15px gray;
+    transition: box-shadow 0.3s ease-in-out;
 	width:780px;
 	height:439px;
+
 }
 
 #nullImage {
@@ -36,6 +46,8 @@
 
 .movieCards:hover {
 	overflow:scroll;
+	box-shadow:0 10px 16px 0 #8470ff,0 6px 20px 0 #8470ff;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 .movieCards > p{
